services/catalog/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s-catalog
  namespace: stage
spec:
  type: NodePort
  ports:
  - name: main
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: s-catalog
