services/catalog/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: s-catalog
  namespace: stage
spec:
  rules:
  - host: catalog.showdown
    http:
      paths:
      - backend:
          serviceName: s-catalog
          servicePort: main
        path: /
